I fixed the alignment of the card and the attribution. However, the solution feels quite hacky. I created a holder for the card and gave it flex-grow: 1. This fixed the position of the attribution but messed up the card position. Next I gave it display flex and aligned the card centrally within that new holder

--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,11 @@ body {
   align-items: center;
   min-height: 100vh;
 }
+.card-holder {
+  flex-grow: 1;
+  display: flex;
+  align-items: center;
+}
 .card {
   max-width: 336px;
   background-color: white;
